@@ -1,3 +1,12 @@
+2021-06-08  Werner Lemberg  <wl@gnu.org>
+
+	[sfnt] Sanitize cmap4 table better.
+
+	Fixes #1062.
+
+	* src/sfnt/ttcmap.c (tt_cmap4_validate): Handle a too-small value of
+	`length` gracefully.
+
 2021-06-08  Dominik Röttsches  <drott@chromium.org>
 
 	[sfnt] Pointer validity check when reading COLR 'v1' layers
